--- a/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.json
+++ b/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.json
@@ -2,9 +2,10 @@
   "AllowedHosts": "*",
   "UseInMemoryBus": false,
   "UseInMemoryDatabase": false,
-  "ConnectionStrings": {
-    "NowProvisionApiDbContext": "local"
-  },
+	"ConnectionStrings": {
+		"NowProvisionApiDbContext": "Server=DESKTOP-P0P0RVI\\SQLEXPRESS;Database=Collabra;Trusted_Connection=True;",
+		"OrderDockerContext": "Server=localhost,51651;Database=Collabra10;User Id=SA;Password=#testingDockerPassword#;"
+	},
   "Serilog": {
     "Using": [],
     "MinimumLevel": {
