NowProvisionApiDbContext and resolve some issues

--- a/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.json
+++ b/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.json
@@ -1,27 +1,28 @@
 {
-  "AllowedHosts": "*",
-  "UseInMemoryBus": false,
-  "UseInMemoryDatabase": false,
-  "ConnectionStrings": {
-    "NowProvisionApiDbContext": "local"
-  },
-  "Serilog": {
-    "Using": [],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
-    "WriteTo": []
-  },
-  "JwtSettings": {
-    "Audience": "",
-    "Authority": "",
-    "AuthorizationUrl": "",
-    "TokenUrl": "",
-    "ClientId": ""
-  }
+	"AllowedHosts": "*",
+	"UseInMemoryBus": false,
+	"UseInMemoryDatabase": false,
+	"ConnectionStrings": {
+		"NowProvisionApiDbContext": "Server=DESKTOP-P0P0RVI\\SQLEXPRESS;Database=Collabra;Trusted_Connection=True;",
+		"NowProvisionDockerContext": "Server=localhost,51651;Database=Collabra10;User Id=SA;Password=#testingDockerPassword#;"
+	},
+	"Serilog": {
+		"Using": [],
+		"MinimumLevel": {
+			"Default": "Information",
+			"Override": {
+				"Microsoft": "Warning",
+				"System": "Warning"
+			}
+		},
+		"Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+		"WriteTo": []
+	},
+	"JwtSettings": {
+		"Audience": "",
+		"Authority": "",
+		"AuthorizationUrl": "",
+		"TokenUrl": "",
+		"ClientId": ""
+	}
 }
