--- a/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.Development.json
+++ b/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.Development.json
@@ -1,38 +1,42 @@
 {
-  "AllowedHosts": "*",
-  "UseInMemoryBus": false,
-  "UseInMemoryDatabase": true,
-  "Serilog": {
-    "Using": [],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
-    "WriteTo": [
-      { "Name": "Console" },
-      {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
-      }
-    ]
-  },
-  "JwtSettings": {
-    "Audience": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a",
-    "Authority": "https://localhost:5010",
-    "AuthorizationUrl": "https://localhost:5010/connect/authorize",
-    "TokenUrl": "https://localhost:5010/connect/token",
-    "ClientId": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a"
-  },
-  "RMQ": {
-    "Host": "rmqlocal",
-    "VirtualHost": "colmiler",
-    "Username": "test",
-    "Password": "test"
-  }
+	"AllowedHosts": "*",
+	"UseInMemoryBus": false,
+	"UseInMemoryDatabase": false,
+	"ConnectionStrings": {
+		"NowProvisionApiDbContext": "Server=DESKTOP-P0P0RVI\\SQLEXPRESS;Database=Collabra;Trusted_Connection=True;",
+		"NowProvisionDockerContext": "Server=localhost,51651;Database=Collabra10;User Id=SA;Password=#testingDockerPassword#;"
+	},
+	"Serilog": {
+		"Using": [],
+		"MinimumLevel": {
+			"Default": "Information",
+			"Override": {
+				"Microsoft": "Warning",
+				"System": "Warning"
+			}
+		},
+		"Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+		"WriteTo": [
+			{ "Name": "Console" },
+			{
+				"Name": "Seq",
+				"Args": {
+					"serverUrl": "http://localhost:5341"
+				}
+			}
+		]
+	},
+	"JwtSettings": {
+		"Audience": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a",
+		"Authority": "https://localhost:5010",
+		"AuthorizationUrl": "https://localhost:5010/connect/authorize",
+		"TokenUrl": "https://localhost:5010/connect/token",
+		"ClientId": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a"
+	},
+	"RMQ": {
+		"Host": "rmqlocal",
+		"VirtualHost": "colmiler",
+		"Username": "test",
+		"Password": "test"
+	}
 }
