adjustments Swagger Extension

--- a/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.Development.json
+++ b/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.Development.json
@@ -27,11 +27,13 @@
 		]
 	},
 	"JwtSettings": {
-		"Audience": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a",
 		"Authority": "https://localhost:5010",
+		"JwtAudience": "https://NowProv-dev.api.collabra.io",
 		"AuthorizationUrl": "https://localhost:5010/connect/authorize",
 		"TokenUrl": "https://localhost:5010/connect/token",
-		"ClientId": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a"
+		"ClientId": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a",
+		"Jwtissuer": "https://now.collabratechnology.com",
+		"JwtKey": "PoRyuovtNMf3gUlCyLri9IQuItUI19XfZvcU1uEbxK8="
 	},
 	"RMQ": {
 		"Host": "rmqlocal",
