--- a/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.json
+++ b/NowProvisionAPI/src/NowProvisionAPI.WebApi/appsettings.json
@@ -19,10 +19,12 @@
 		"WriteTo": []
 	},
 	"JwtSettings": {
-		"Audience": "",
-		"Authority": "",
-		"AuthorizationUrl": "",
-		"TokenUrl": "",
-		"ClientId": ""
+		"Authority": "https://localhost:5010",
+		"JwtAudience": "https://NowProv-dev.api.collabra.io",
+		"AuthorizationUrl": "https://localhost:5010/connect/authorize",
+		"TokenUrl": "https://localhost:5010/connect/token",
+		"ClientId": "bb30dd61-2b7b-405b-a172-0e28a2eabe5a",
+		"Jwtissuer": "https://now.collabratechnology.com",
+		"JwtKey": "PoRyuovtNMf3gUlCyLri9IQuItUI19XfZvcU1uEbxK8="
 	}
 }
