--- a/NowProvisionAPI/src/NowProvisionAPI.WebApi/NowProvisionAPI.WebApi.csproj
+++ b/NowProvisionAPI/src/NowProvisionAPI.WebApi/NowProvisionAPI.WebApi.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Hangfire" Version="1.7.24" />
     <PackageReference Include="MassTransit" Version="7.1.8" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.8" />
